--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Weather App</title>
-</head>
-<body>
+  </head>
+  <body>
     <h1>Welcome to the Weather App</h1>
-    <footer>Created and designed by DarasimiOke</footer>
-</body>
+    <footer>
+      Created and designed by
+      <a href="https://github.com/DarasimiOke" target="_blank">Darasimi-Oke</a>
+    </footer>
+  </body>
 </html>
