update index file

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Weather App</title>
   </head>
   <body>
-    <h1>Welcome to the Weather App</h1>
+    <h1>Welcome to my Weather App</h1>
     <footer>
       Created and designed by
       <a href="https://github.com/DarasimiOke" target="_blank">Darasimi-Oke</a>
