--- a/index.html
+++ b/index.html
@@ -10,6 +10,14 @@
     <footer>
       Created and designed by
       <a href="https://github.com/DarasimiOke" target="_blank">Darasimi-Oke</a>
+      code hosted
+      <a href="https://github.com/DarasimiOke/WeatherApp" target="_blank"
+        >on github</a
+      >
+      and website hosted
+      <a href="https://darasimioke.github.io/WeatherApp/" target="_blank"
+        >on githubpages</a
+      >
     </footer>
   </body>
 </html>
