--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
     <footer>
       Created and designed by
       <a href="https://github.com/DarasimiOke" target="_blank">Darasimi-Oke</a>
-      code hosted
+      with
       <a href="https://github.com/DarasimiOke/WeatherApp" target="_blank"
-        >on github</a
+        >open-source on github</a
       >
-      and website hosted
+      and
       <a href="https://darasimioke.github.io/WeatherApp/" target="_blank"
-        >on githubpages</a
+        >hosted on githubpages</a
       >
     </footer>
   </body>
