--- a/index.html
+++ b/index.html
@@ -47,9 +47,15 @@
       <footer>
         <p>
           This project was coded by
-          <a href="#" target="_blank">Darasimi</a> and is
-          <a href="#" target="_blank"> on GitHub</a> and
-          <a href="#" target="_blank">hosted on Github Pages</a>
+          <a href="https://github.com/DarasimiOke/" target="_blank">Darasimi</a>
+          and is
+          <a href="https://github.com/DarasimiOke/WeatherApp" target="_blank">
+            on GitHub</a
+          >
+          and
+          <a href="https://darasimioke.github.io/WeatherApp/" target="_blank"
+            >hosted on Github Pages</a
+          >
         </p>
       </footer>
     </div>
